--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,11 @@ body{
     font-family: 'Work Sans', sans-serif;
 }
 .section-padding{
-    padding: 0 244px;
+    padding: 0 200px;
 }
 
 /* Navbar Style */
 nav{
-    height: 130px;
     border: 1px solid rgb(230, 65, 92);
     display: flex;
     justify-content: space-between;
@@ -25,5 +24,63 @@ nav{
 }
 .logo-container img{
     height: 40px;
+}
+.logo-text{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+.logo-text span{
+    color: #ff42a5;
+}
+.menus{
+    display: flex;
+    align-items: center;
+}
+.menus ul{
+    display: flex;
+    align-items: center;
+}
+.menus ul li{
+    list-style: none;
+    padding-right: 1.8rem;
+}
+.menus ul li a{
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #3C354F;
+}
+.menus-btn{
+    display: flex; 
+    align-items: center; 
+    gap: 5px;
+    border: 0;
+    border-radius: 8px;
+    background: rgba(11, 2, 35, 0.10);
+    padding: 10px 20px;
+    
+}
 
+
+/* Mobile Responsive Style */
+@media screen and (max-width: 576px){
+    nav, .menus, .menus ul{
+        flex-direction: column;
+    }
+    .menus ul li{
+        padding-bottom: 20px;
+    }
+}
+
+/* Table and Medium Device Responsive Style*/
+@media screen and (min-width: 576px) and (max-width: 960px){
+    nav{
+        justify-content: center;
+    }
+    .section-padding{
+        padding: 0px;
+    }
+    .menus ul li a{
+        font-size: 1rem;
+    }
 }
