--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,45 @@ nav{
     width: 200px;
 }
 
+/* Games Button Style */
+.games-button-container{
+    margin-top: 42px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+}
+.games-button-row{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.games-btn{
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+    font-family: Work Sans;
+    color: #0B0223;
+    font-size: 0.8rem;
+    font-weight: 600;
+    padding: 7px 10px 7px 7px;
+    border-radius: 50px;
+    background: #FFF;
+    border: 1px solid rgb(243, 241, 241);
+}
+.games-btn:hover{
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    -webkit-background-clip: text;
+    color: transparent;
+    border-color: #ff42a5;
+}
+.games-btn img{
+    width: 40px;
+}
+.row-1{
+    padding-bottom: 20px;
+}
 
 
 /* Mobile Responsive Style */
@@ -317,6 +356,9 @@ nav{
         row-gap: 30px;
     }
     .play-instantly-content, .funny-videos-card-desc{
+        text-align: center;
+    }
+    .play-instantly-title{
         text-align: center;
     }
 }
