--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,7 @@ nav{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    gap: 10px;
 }
 .games-btn{
     padding: 0;
@@ -319,7 +320,12 @@ nav{
         top:230px;
         left: -50px;
     }
- 
+    .games-button-container{
+        margin-top: 100px;
+    }
+    .games-button-row{
+        flex-wrap: wrap;
+    }
 }
 
 /* Table and Medium Device Responsive Style*/
@@ -360,5 +366,11 @@ nav{
     }
     .play-instantly-title{
         text-align: center;
+    }
+    .games-button-container{
+        margin-top: 100px;
+    }
+    .games-button-row{
+        flex-wrap: wrap;
     }
 }
